[package]
name = "tp-led-matrix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tp-led-matrix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = "2.1.0"
cortex-m-rt = "0.7.3"
embassy-stm32 = { version = "0.1.0", features = ["stm32l475vg", "time-driver-any"] }
cortex-m = { version = "0.7.0", features = ["critical-section-single-core"] }
defmt = '0.3.6'
defmt-rtt = '0.4.0'
panic-probe = {version = "0.3.1", features = ["print-defmt"]}
embassy-time = {vesion = "0.3.0", features = ["tick-hz-32_768"]}
embedded-hal = "1.0.0"
embassy-executor = {version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"]}
embassy-sync = {version = "0.5.0"}
heapless = "0.8.0"

# optimizing the setup
[profile.release]
debug = true      # symbols are nice and they don't increase the size on the target
lto = true        # better optimizations
codegen-units = 1 # better optimizations
